# media-viewer

./: package.json  pnpm-lock.yaml  vite.config.ts
src/: App.svelte  main.ts  resize.ts  styles.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: main.rs
src/lib/: Media.svelte  Title.svelte  Tree.svelte
